--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,11 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  DroidFreak36
 
 # Build settings
-theme: minimal-mistakes-jekyll
+# theme: minimal-mistakes-jekyll
+remote_theme: "mmistakes/minimal-mistakes@4.26.2"
 plugins:
   - jekyll-feed
+  - jekyll-include-cache
 
 # Exclude from processing.
 # The following items will not be processed, by default.
