--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ github_username:  DroidFreak36
 # Build settings
 # theme: minimal-mistakes-jekyll
 remote_theme: "mmistakes/minimal-mistakes@4.26.2"
-minimal_mistakes_skin: "plum"
+minimal_mistakes_skin: "dark"
 plugins:
   - jekyll-feed
   - jekyll-include-cache
